Added new researching

--- a/python/jupyter/list_shorthand.ipynb
+++ b/python/jupyter/list_shorthand.ipynb
@@ -152,6 +152,31 @@
     "    \n",
     "    return []\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ALL_LOG = False\n",
+    "ELEMENT_DEBUGGING = False\n",
+    "API_DEBUGGING = False\n",
+    "\n",
+    "((not ELEMENT_DEBUGGING) and (not ALL_LOG)) or print('Hello World')\n",
+    "(not API_DEBUGGING) and (not ALL_LOG) or print('API LOG')\n"
+   ]
   }
  ],
  "metadata": {
