Added new shorthand

--- a/python/jupyter/list_shorthand.ipynb
+++ b/python/jupyter/list_shorthand.ipynb
@@ -6,6 +6,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import wraps\n",
+    "import time\n",
+    "\n",
+    "def timeit(func):\n",
+    "    @wraps(func)\n",
+    "    def timeit_wrapper(*args, **kwargs):\n",
+    "        start_time = time.perf_counter()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        end_time = time.perf_counter()\n",
+    "        total_time = end_time - start_time\n",
+    "        print(f'Function {func.__name__}{args} {kwargs} Took {total_time:.6f} seconds')\n",
+    "        return result\n",
+    "    return timeit_wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = range(1, 1000)\n",
+    "\n",
+    "\n",
+    "# Compare list, with index\n",
+    "expected_list = \"a b c d e f g h i k l m n o a p q r s t u v w x y z\".split() * 24\n",
+    "sublist = \"a b\"\n",
+    "\n",
+    "[\n",
+    "    \"a\", \"a\"\n",
+    "    \"a, b\", \"a, b\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "check_contains = lambda mainlist, sublist: mainlist[mainlist.index(sublist[0]):][:len(sublist)] == sublist\n",
+    "\n",
+    "def check_contains_basic(mainlist, sublist):\n",
+    "    for i in range(len(mainlist)):\n",
+    "        if mainlist[i:i + len(sublist)] == sublist:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "# one_line_solution_2 = lambda mainlist, sublist: any(mainlist[i:i + len(sublist)] == sublist for i, _ in enumerate(mainlist))\n",
+    "# one_line_solution_3 = lambda mainlist, sublist: any(mainlist[i:i + len(sublist)] == sublist for i in range(len(mainlist)))\n",
+    "\n",
+    "\n",
+    "print('a b: ',      check_contains(expected_list, 'o a p'.split()))\n",
+    "# print('a b c: ',    one_line_solution_1(expected_list, 'a b c'.split()))\n",
+    "# print('a b c d: ',  one_line_solution_1(expected_list, 'a b c d'.split()))\n",
+    "# print('m n o: ',    one_line_solution_1(expected_list, 'm n o'.split()))\n",
+    "# print('m n o p: ',  one_line_solution_1(expected_list, 'm n o p'.split()))\n",
+    "# print('k l m n o:', one_line_solution_1(expected_list, 'k l m n'.split()))\n",
+    "\n",
+    "# print(\"\")\n",
+    "# print('b a: ',       one_line_solution_1(expected_list, 'b a'.split()))\n",
+    "# print('a c b: ',     one_line_solution_1(expected_list, 'a c b'.split()))\n",
+    "# print('a d c b: ',   one_line_solution_1(expected_list, 'a d c b'.split()))\n",
+    "# print('o m n: ',     one_line_solution_1(expected_list, 'o m n'.split()))\n",
+    "# print('o m n p: ',   one_line_solution_1(expected_list, 'o m n p'.split()))\n",
+    "# print('q n o m q: ', one_line_solution_3(expected_list, 'q n o m q'.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n = list(range(1, 100))\n",
     "\n",
     "# Get index [start:stop] in list\n",
