--- a/python/jupyter/quick_text.ipynb
+++ b/python/jupyter/quick_text.ipynb
@@ -39,6 +39,39 @@
     "mydict = {'george': \"aa\", 'amber': 19}\n",
     "print(list(mydict.keys())[list(mydict.values()).index(\"aa\")])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tui la >>  <generator object tui_la_func_yield at 0x10f274fb0>\n",
+      "Hello, tui la func_a\n",
+      "Tui la giá trị truyền vào\n",
+      "Hello, tui la func_b\n"
+     ]
+    }
+   ],
+   "source": [
+    "tui_la_func_a = lambda : print('Hello, tui la func_a')\n",
+    "tui_la_func_b = lambda : print('Hello, tui la func_b')\n",
+    "tui_la_func_c = lambda x : x\n",
+    "\n",
+    "def tui_la_func_yield(value):\n",
+    "    tui_la_func_a()\n",
+    "    yield tui_la_func_c(value)\n",
+    "    tui_la_func_b()\n",
+    "\n",
+    "tui_la_func = tui_la_func_yield('Tui la giá trị truyền vào')\n",
+    "print(\"Tui la >> \",tui_la_func)\n",
+    "\n",
+    "for _func in tui_la_func:\n",
+    "    print(_func)\n"
+   ]
   }
  ],
  "metadata": {
